# IMChat

./: .gitignore  README.md
IMChatClient/CatchScreen/: CatchScreenDlg.cpp
IMChatClient/CatchScreen/debug/: CatchScreen.exe.recipe  CatchScreen.ilk
IMChatClient/Source/: MessageLogger.h  Path.cpp  SendMsgThread.cpp  Startup.cpp  ThreadPool.cpp  TrayIcon.h
IMChatClient/Source/Debug/: EdoyunIMClient.exe.recipe  msxml3.tlh  msxml3.tli
IMChatClient/WTL10_10320_Release/AppWizard/: Setup.js
IMChatClient/iAutoUpdate/debug/: iUpdateAuto.exe.recipe  iUpdateAuto.ilk
IMChatClient/jsonStudy/: jsonStudy.sln
IMChatClient/jsonStudy/Debug/: jsonlib.idb  jsonlib.lib
IMChatClient/jsonStudy/MakeProj/: MakeProj.cpp  MakeProj.rc  MakeProj.vcxproj  MakeProj.vcxproj.filters  Resource.h
IMChatClient/jsonStudy/WTLDlg/: MainDlg.h  RCa03996  RDa03996  WTLDlg.cpp  WTLDlg.h  WTLDlg.rc  WTLDlg.vcxproj  WTLDlg.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h
IMChatClient/jsonStudy/WTLProject/: MainFrm.h  WTLProject.aps  WTLProject.cpp  WTLProject.h  WTLProject.rc  WTLProject.vcxproj  WTLProject.vcxproj.filters  resource.h  stdafx.cpp
IMChatClient/jsonStudy/WTLStudy/: WTLStudy.aps  WTLStudy.cpp  WTLStudy.rc  WTLStudy.vcxproj  WTLStudy.vcxproj.filters  resource.h
IMChatClient/jsonStudy/jsonStudy/: XmlDocument.cpp  (+5 more)
IMChatServer/: CMakeLists.txt
IMChatServer/EdoyunIM_server/: CMakeLists.txt  CMakeSettings.json
IMChatServer/IMChatServer/: BinaryReader.cpp  CMakeLists.txt  ClientSession.h  EdoyumIMServer.cpp  EdoyumIMTestClient.cpp  EdoyunIM_server.cpp  EdoyunIM_server.h  Field.cpp  IMServer.cpp  IMServer.h  MySqlManager.cpp  QueryResult.cpp  QueryResult.h  UserManager.cpp  UserManager.h  mysqltool.cpp
IMChatServer/IMChatServer/base/: LogStream.h  Singleton.h  TimeZone.cc  TimeZone.h
IMChatServer/IMChatServer/base/tests/: Date_unittest.cc  Logging_test.cc  Thread_bench.cc
IMChatServer/IMChatServer/net/: InetAddress.cc  InetAddress.h
NewServer/IM_server/: CMakeLists.txt  myserver.sln  myserver.vcxproj  myserver.vcxproj.filters
(+208 files in other folders)
